# python-project-lvl1

./: Makefile  README.md  gitignore  pyproject.toml
.github/workflows/: pyci.yml
brain_games/: cli.py  common_logic.py
brain_games/games/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: brain.py  brain_even.py  brain_games.py  common_logic.py  script_brain_calc.py  script_brain_even.py  script_brain_gcd.py  script_brain_prime.py  script_brain_progression.py
