[tool.poetry]
name = "brain_games"
version = "0.1.9"
description = "Five brain-games by Pavel"
authors = ["Pavel <variagkzn@mail.ru>"]
repository = "https://github.com/PavelVdovinKZN/python-project-lvl1"
packages = [
  { include = "brain_games" },
]

[tool.poetry.scripts]
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.games.brain_calc:main"
brain-gcd = "brain_games.games.brain_gcd:main"
brain-progression = "brain_games.games.brain_progression:main"
brain-prime = "brain_games.games.brain_prime:main"

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
